js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/lib1/l1.1.kt
@JsExport
fun foo() = 0
